--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment
+<LinearLayout
     android:id="@+id/fragment_home"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -77,4 +77,4 @@
                 />
         </LinearLayout>
     </ScrollView>
-</fragment>
+</LinearLayout>
