--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,32 +8,15 @@
     android:orientation="vertical"
     tools:context="com.example.mario.ongproject.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/content"
+    <fragment
+        android:name="com.example.mario.ongproject.HomeFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="7"
+        android:id="@+id/mainFragment"
+        >
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
-        <!--
-        <fragment
-            android:name="com.example.mario.ongproject.MainFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/mainFragment"
-            >
-
-        </fragment>
-        -->
-    </FrameLayout>
+    </fragment>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
