Add video support on home view

--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <TextView
@@ -25,12 +25,10 @@
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <VideoView
-                android:id="@+id/videoView"
+            <WebView
                 android:layout_width="match_parent"
                 android:layout_height="244dp"
-
-                />
+                android:id="@+id/mWebView"/>
 
             <TextView
                 android:id="@+id/txt1"
