--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -59,5 +59,6 @@
         android:layout_margin="16dp"
         android:clickable="true"
         app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        app:srcCompat="@android:drawable/ic_menu_send"
+        app:elevation="4dp"/>
 </android.support.design.widget.CoordinatorLayout>
