--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -19,9 +19,9 @@
                 android:id="@+id/txt_Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_title"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/home_title"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -34,12 +34,11 @@
                 android:id="@+id/txt1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text1"
-                android:textAlignment="center"
-
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                />
+
+                android:text="@string/home_text1"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/txt2"
