--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -13,11 +13,20 @@
             android:id="@+id/txt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/title_contact"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/contact_title"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/txt_subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/contact_subtitle"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
             android:id="@+id/editTxtName"
@@ -31,13 +40,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/contact_phone"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/editTxtEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/contact_email"
             android:inputType="textPersonName" />
 
         <EditText
