--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -19,59 +19,38 @@
                 android:id="@+id/txt_Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/home_title"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="@string/home_title"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <WebView
                 android:layout_width="match_parent"
                 android:layout_height="244dp"
-                android:id="@+id/mWebView"/>
+                android:id="@+id/mWebView">
+
+            </WebView>
 
             <TextView
-                android:id="@+id/txt1"
+                android:id="@+id/txtHome1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/home_cuidado"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-
-                android:text="@string/home_text1"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/txt2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_text2"
                 android:textAlignment="center"
-
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                />
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/txt3"
+                android:id="@+id/txt_home2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text3"
-                android:textAlignment="center"
-
+                android:text="@string/home_cuidado_sub"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                />
-
-            <TextView
-                android:id="@+id/txt4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_text4"
                 android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
