--- a/app/src/main/res/layout/detach_view.xml
+++ b/app/src/main/res/layout/detach_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,4 +13,10 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
