--- a/app/src/main/res/layout/detach_list_item.xml
+++ b/app/src/main/res/layout/detach_list_item.xml
@@ -1,39 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-
-        app:srcCompat="@mipmap/ic_launcher" />
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title_card_text"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/detach_card"
+        card_view:cardCornerRadius="4dp"
+        card_view:elevation="14dp"
+        android:layout_margin="10dp"
+        >
+        
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Teste titulo"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-        <TextView
-            android:id="@+id/descr_card_text"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textAlignment="center"
-            android:layout_weight="1"
-            android:text="Teste descricaoo"/>
+            android:padding="@dimen/activity_vertical_margin"
+            >
+            <ImageView
+                android:id="@+id/detach_img_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="16dp"
+                android:src="@mipmap/ic_launcher" />
 
+            <TextView
+                android:id="@+id/title_card_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="Teste titulo"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/detach_img_item"
+                android:textSize="30sp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            <TextView
+                android:id="@+id/descr_card_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_below="@+id/title_card_text"
+                android:layout_toRightOf="@+id/detach_img_item"
+                android:text="Teste descricaoo"/>
 
-    </LinearLayout>
+        </RelativeLayout>
 
-</LinearLayout>
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
