--- a/app/src/main/res/layout/detach_list_item.xml
+++ b/app/src/main/res/layout/detach_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -9,10 +10,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/detach_card"
         card_view:cardCornerRadius="4dp"
-        card_view:elevation="14dp"
-        android:layout_margin="10dp"
+        card_view:elevation="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         >
-        
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,35 +23,47 @@
             >
             <ImageView
                 android:id="@+id/detach_img_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/title_card_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="Teste titulo"
+                android:text=""
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/detach_img_item"
-                android:textSize="30sp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-            <TextView
-                android:id="@+id/descr_card_text"
-                android:layout_width="match_parent"
+                android:textSize="24dp"
+                />
+
+            <Button
+                android:id="@+id/detach_button_donate"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:layout_below="@+id/title_card_text"
                 android:layout_toRightOf="@+id/detach_img_item"
-                android:text="Teste descricaoo"/>
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:background="@color/cardview_light_background"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="@string/donate"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title_card_text"
+                android:layout_alignParentRight="true"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:background="@color/cardview_light_background"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="@string/share"
+                />
 
         </RelativeLayout>
-
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
