--- a/app/src/main/res/layout/detach_list_item.xml
+++ b/app/src/main/res/layout/detach_list_item.xml
@@ -57,6 +57,7 @@
                 android:text="@string/donate"
                 />
             <Button
+                android:id="@+id/detach_button_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/title_card_text"
