--- a/app/src/main/res/layout/donate_view.xml
+++ b/app/src/main/res/layout/donate_view.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
     <WebView
+        android:id="@+id/donateWebView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/donateWebView"/>
+        android:contentDescription="@string/donate_descr" />
 </LinearLayout>
