--- a/app/src/main/res/layout/events_view.xml
+++ b/app/src/main/res/layout/events_view.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/customCalendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:contentDescription="@string/calendar_descr" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
