update donate layout

--- a/app/src/main/res/layout/donate_new_view.xml
+++ b/app/src/main/res/layout/donate_new_view.xml
@@ -2,25 +2,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/activity_vertical_margin"
+    >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtDonationTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAlignment="center"
+        android:padding="@dimen/activity_vertical_margin"
+        android:text="@string/donate_title" />
 
-    <SeekBar
-        android:id="@+id/seekDonate"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
+    <TextView
+        android:id="@+id/txtDonationSubtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="20" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAlignment="center"
+        android:text="@string/donate_subtitle" />
 
     <ImageView
         android:id="@+id/imgChild"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         app:srcCompat="@mipmap/ic_launcher_round" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        >
+
+        <SeekBar
+            android:id="@+id/seekDonate"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="100"
+            android:progress="20" />
+
+        <TextView
+            android:id="@+id/txtDonateValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="R$ 10" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnDonate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:text="@string/donate" />
+
 </LinearLayout>
