--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#4caf50</color>
     <color name="colorPrimaryDark">#2E7D32</color>
-    <color name="colorAccent">#616161</color>
+    <color name="colorAccent">#ef5350</color>
+    <color name="colorDonateBackground">#E8F7FC</color>
 </resources>
