--- a/app/src/main/res/layout/detach_view.xml
+++ b/app/src/main/res/layout/detach_view.xml
@@ -12,9 +12,14 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
+    
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/detach_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
