--- a/app/src/main/res/layout/contact_view.xml
+++ b/app/src/main/res/layout/contact_view.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,6 +29,11 @@
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
+        <!-- Auto hint effect -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <EditText
             android:id="@+id/editTxtName"
             android:layout_width="match_parent"
@@ -35,6 +41,13 @@
             android:hint="@string/contact_name"
             android:inputType="textPersonName" />
 
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <EditText
             android:id="@+id/editTxtMail"
             android:layout_width="match_parent"
@@ -42,12 +55,21 @@
             android:hint="@string/contact_mail"
             android:inputType="textEmailAddress" />
 
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <EditText
             android:id="@+id/editTxtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/contact_phone"
             android:inputType="phone" />
+        </android.support.design.widget.TextInputLayout>
+
 
         <EditText
             android:id="@+id/editTxtMessage"
@@ -56,7 +78,6 @@
             android:layout_weight="1"
             android:hint="@string/contact_message"
             android:inputType="textMultiLine" />
-
     </LinearLayout>
 
 
