fix layout adding id's error

--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -42,20 +42,21 @@
                 android:textAlignment="center"
                 android:text="Jantar dançante 10 anos do institudo herdeiros do futuro"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/event_img_item"
+                android:layout_toEndOf="@id/event_img_item"
                 android:textSize="12sp"
                 />
 
             <ImageView
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_event_black_24dp"
                 android:id="@+id/calendar_icon"
 
-                android:layout_alignTop="@+id/clock_icon"
-                android:layout_toEndOf="@+id/event_img_item" />
+                android:layout_below="@id/txt_event_title"
+                android:layout_toEndOf="@id/event_img_item" />
 
             <TextView
                 android:id="@+id/txt_event_date"
@@ -65,8 +66,8 @@
                 android:layout_marginTop="8dp"
                 android:text="06/07/2017"
                 android:textSize="12sp"
-                android:layout_alignBottom="@+id/calendar_icon"
-                android:layout_toEndOf="@+id/calendar_icon" />
+                android:layout_alignBottom="@id/calendar_icon"
+                android:layout_toEndOf="@id/calendar_icon" />
 
 
 
@@ -78,8 +79,8 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_access_time_black_24dp"
                 android:id="@+id/clock_icon"
-                android:layout_below="@+id/txt_event_title"
-                android:layout_toEndOf="@+id/txt_event_date"
+                android:layout_below="@id/txt_event_title"
+                android:layout_toEndOf="@id/txt_event_date"
                 android:layout_marginStart="15dp" />
             <TextView
                 android:layout_width="wrap_content"
@@ -87,8 +88,8 @@
                 android:layout_margin="4dp"
                 android:text="14:00"
                 android:textSize="12sp"
-                android:layout_alignBottom="@+id/clock_icon"
-                android:layout_toEndOf="@+id/clock_icon"
+                android:layout_alignBottom="@id/clock_icon"
+                android:layout_toEndOf="@id/clock_icon"
                 android:id="@+id/txt_event_time" />
 
 
