--- a/app/src/main/res/layout/detach_view.xml
+++ b/app/src/main/res/layout/detach_view.xml
@@ -18,8 +18,21 @@
         android:id="@+id/detach_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <ProgressBar
-        android:id="@+id/progress_bar"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:baselineAligned="true"
+        android:orientation="horizontal">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 </LinearLayout>
