--- a/app/src/main/res/layout/events_view.xml
+++ b/app/src/main/res/layout/events_view.xml
@@ -7,11 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_margin="8dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/events_available"
 
         />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/events_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
     <RelativeLayout
@@ -30,10 +36,5 @@
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/events_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
