--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -9,7 +9,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/detach_card"
+        android:id="@+id/event_item_card"
         card_view:cardCornerRadius="4dp"
         card_view:elevation="8dp"
         android:layout_marginTop="4dp"
