added share button on event

--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -92,6 +92,18 @@
                 android:layout_toEndOf="@id/clock_icon"
                 android:id="@+id/txt_event_time" />
 
+            <Button
+                android:id="@+id/event_button_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/txt_event_time"
+                android:layout_alignParentRight="true"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:background="@color/cardview_light_background"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="@string/share"
+                />
+
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
