--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/event_button_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/txt_event_time"
+                android:layout_alignBaseline="@id/txt_event_time"
                 android:layout_alignParentRight="true"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:background="@color/cardview_light_background"
