detach item get image from heroku

--- a/app/src/main/res/layout/detach_list_item.xml
+++ b/app/src/main/res/layout/detach_list_item.xml
@@ -31,7 +31,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-
+                android:src="@drawable/ic_wallpaper_black_24dp"
                 />
 
             <TextView
